not Drop Item on taken or unavailable slot

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,11 @@ crashlytics-build.properties
 
 
 .vscode/settings.json
+
+Assets/Demigiant.meta~Stashed changes
+
+Assets/Demigiant.meta~Stashed changes.meta
+
+Assets/Demigiant.meta~Updated upstream
+
+Assets/Demigiant.meta~Updated upstream.meta
