type item and fix lot of bug with selection

--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,5 @@ Assets/Demigiant.meta~Stashed changes.meta
 Assets/Demigiant.meta~Updated upstream
 
 Assets/Demigiant.meta~Updated upstream.meta
+
+fmod_editor.log
